# semantic-search-kit

./: .gitignore  LICENSE  NOTICES  Package.resolved  Package.swift  README.md
.github/workflows/: ci.yml
Sources/SemanticSearchKit/: SemanticSearchKit.swift
Sources/SemanticSearchKit/Embedding/: DocumentEmbedding.swift  EmbeddingStorage.swift  QueryEmbedder.swift
Sources/SemanticSearchKit/Engine/: SemanticSearchEngine.swift
Sources/SemanticSearchKit/Keyword/: KeywordScorer.swift
Sources/SemanticSearchKit/Models/: SemanticSearchResult.swift
Sources/SemanticSearchKit/Protocols/: EmbeddingProviding.swift  QueryEmbedding.swift  SemanticSearchable.swift
Sources/SemanticSearchKit/Scoring/: AdaptiveHybridScorer.swift
Tests/SemanticSearchKitTests/Benchmark/: CoreMLBenchmarkTests.swift  EmbeddingBenchmarkTests.swift  HybridBenchmarkTests.swift  KeywordBenchmarkTests.swift
Tests/SemanticSearchKitTests/Embedding/: EmbeddingStorageErrorTests.swift
Tests/SemanticSearchKitTests/Engine/: CosineSimilarityTests.swift  SemanticSearchEngineTests.swift
Tests/SemanticSearchKitTests/Fixtures/: corpus.json  embeddings_index.json  query_embeddings.json
Tests/SemanticSearchKitTests/Helpers/: BenchmarkFixtures.swift  BenchmarkTestCases.swift  MockEmbeddingStorage.swift  MockQueryEmbedder.swift  RetrievalMetrics.swift  TestItem.swift
cli/: pyproject.toml
cli/examples/: corpus_full.json  corpus_minimal.json  queries.json
cli/ssk/: __init__.py  __main__.py  cli.py  embeddings.py  export.py  metrics.py  passage.py  pipeline.py  schema.py  train.py  triplets.py
(+2 files in other folders)
