[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-search-kit"
version = "0.1.0"
description = "CLI toolchain for training and exporting on-device CoreML semantic search models."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Niklas Hauser" },
]
keywords = ["coreml", "semantic-search", "knowledge-distillation", "ios", "macos", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=3.0.0",
    "coremltools>=7.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
]

[project.scripts]
ssk = "ssk.cli:app"

[project.urls]
Homepage = "https://github.com/gamertrumpfi/semantic-search-kit"
Repository = "https://github.com/gamertrumpfi/semantic-search-kit"

[tool.hatch.build.targets.wheel]
packages = ["ssk"]
